--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
-html, body, form {
+html, body, form,button {
   margin: 0;
   padding: 0;
+  font-family: 'Nanum Gothic Coding', monospace;
+}
+
+img {
+  width: 200px;
+  height: 200px;
+  border-radius: 25%;
+  overflow: hidden;
 }
 
 .wrap {
@@ -14,12 +22,16 @@ html, body, form {
 
 .header {
   display: flex;
+  height: 120px;
 }
+
 .header-title {
+  font-family: 'Anton', sans-serif;
+  font-size: 20px;
   text-align: left;
   width: 100%;
   margin-top: 23px;
-  padding: 5px;
+  margin-left: 20px;
   cursor: pointer;
 }
 
@@ -40,6 +52,7 @@ html, body, form {
   cursor: pointer;
   text-decoration: none;
   color: black;
+  font-size: 14px;
 }
 
 .join {
@@ -47,6 +60,7 @@ html, body, form {
   cursor: pointer;
   text-decoration: none;
   color: black;
+  font-size: 14px;
 }
 
 .main {
@@ -58,18 +72,79 @@ html, body, form {
 }
 
 .sidemain {
-  width:10%;
-  border-right:1px solid #dadada;;
+  position:fixed;
+  border-right: 1px solid #4967FD;
 }
 
+
 .choosebtn {
-  display: inline-block;
-  writing-mode: vertical-rl;
+  margin-top: 30px;
+  writing-mode: vertical-lr;
   text-orientation: upright;
+  float: right;
+}
+
+.btn1, .btn2 {
+  width: 50px;
+  height: 180px;
+  font-size: 18px;
+  font-weight: 800;
+  border: 4px solid #4967FD;
+  border-radius: 12px;
+  background-color: white;
+  cursor: pointer;
+}
+
+.btntext {
+  display: flex;
+  justify-content: center;
+  transform: translate(50%, 0);
+}
+
+.btn1:focus {
+  background-color: #4967FD;
+}
+
+.btn2:focus {
+  background-color: #4967FD;
 }
 
 .realmain {
-  width:90%;
+  background-color: #4967FD;
+  width: 1160px;
+  position: relative;
+  left: 40px;
+}
+
+.realmain p {
+  width: 400px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  background-color: white;
+  color: 4967FD;
+  font-weight: 600;
+}
+
+.imgbtn {
+  border: none;
+  border-radius: 25%;
+  background-color: white;
+  cursor: pointer;
+}
+
+.deliverybtn,.snsbtn, .OTTbtn, .moviebtn {
+  width: 1050px;
+  padding: 20px;
+  overflow: scroll;
+  background: #4967FD;
+  border:none;
+   /* 가로 스크롤 */
+  overflow: auto;
+  white-space: nowrap;
+  transform: translate(5%, 0);
 }
 
 .footer {
