--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 
+
 {% include 'head.html' %}
 
 <body>
@@ -12,6 +13,7 @@
     {% endblock %}
 
     <hr>
+    {% include 'homepage.html' %}
 
     {% include 'footer.html' %}
 </body>
