--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,11 +1,3 @@
-    <div class="pragmatic_footer">
-
-        <div class="pragmatic_footer_button">
-            <span>공지사항</span>
-            <span>제휴문의</span>
-            <span>서비스 소개</span>
+        <div class="footer">
+            <p>@한번에 쉬운 설명서를 볼 수 있는 유용한 사이트</p>
         </div>
-        <div style="margin-top: 1rem;">
-            <h6 class="pragmatic_logo">Pragmatic</h6>
-        </div>
-    </div>
