--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,4 @@
-
-<div style="height: 10rem; background-color: #38df81; border-radius: 1rem; margin: 2rem;">
-
+<div class="pragmatic_header">
+    <div>
+        <h1 class="pragmatic_logo">SO EASY</h1>
     </div>
