--- a/ebooksapp/templates/ebooksapp/index.html
+++ b/ebooksapp/templates/ebooksapp/index.html
@@ -20,7 +20,11 @@
           </div>
           <div class="member-box">
             <div class="member">
-              <a href="#" class="login">로그인</a>
+              {% if not user.is_authenticated %}
+              <a href="{% url 'accountapp:login' %}?next={{ request.path }}" class="login">로그인</a>
+              {% else %}
+              <a href="{% url 'accountapp:logout' %}?next={{ request.path }}" class="logout">로그아웃</a>
+              {% endif %}
               <a href="#" class="join">회원가입</a>
             </div>
           </div>
