--- a/templates/head.html
+++ b/templates/head.html
@@ -2,5 +2,42 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Nine Team</title>
+    <title>SO EASY</title>
+
+    <!--  BOOTSTRAP LINK  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!--  GOOGLE FONT LINK  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&display=swap" rel="stylesheet">
+
+    <!-- DEFAULT CSS LINK -->
+    <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
+
+    <style>
+        @font-face {
+            font-family: 'NanumSquareRoundOTFB';
+            src: local('NanumSquareRoundOTFB'),
+            url("{% static 'fonts/NanumSquareRoundOTFB.otf' %}") format("opentype");
+        }
+        @font-face {
+            font-family: 'NanumSquareRoundOTFEB';
+            src: local('NanumSquareRoundOTFEB'),
+            url("{% static 'fonts/NanumSquareRoundOTFEB.otf' %}") format("opentype");
+        }
+        @font-face {
+            font-family: 'NanumSquareRoundOTFL';
+            src: local('NanumSquareRoundOTFL'),
+            url("{% static 'fonts/NanumSquareRoundOTFL.otf' %}") format("opentype");
+        }
+        @font-face {
+            font-family: 'NanumSquareRoundOTFR';
+            src: local('NanumSquareRoundOTFR'),
+            url("{% static 'fonts/NanumSquareRoundOTFR.otf' %}") format("opentype");
+        }
+
+    </style>
+
 </head>
