--- a/ebooksapp/templates/ebooksapp/index.html
+++ b/ebooksapp/templates/ebooksapp/index.html
@@ -22,10 +22,12 @@
             <div class="member">
               {% if not user.is_authenticated %}
               <a href="{% url 'accountapp:login' %}?next={{ request.path }}" class="login">로그인</a>
+              <a href="{% url 'accountapp:create' %}" class="join">회원가입</a>
               {% else %}
+              <a href="{% url 'accountapp:detail' pk=user.pk %}">마이페이지</a>
               <a href="{% url 'accountapp:logout' %}?next={{ request.path }}" class="logout">로그아웃</a>
               {% endif %}
-              <a href="#" class="join">회원가입</a>
+
             </div>
           </div>
       </div>
